--- a/roles/kube-master/templates/kube-apiserver.json.j2
+++ b/roles/kube-master/templates/kube-apiserver.json.j2
@@ -16,8 +16,15 @@
           "--etcd-servers=http://127.0.0.1:2379",
           "--token-auth-file=/dev/null",
           "--bind-address={{ ansible_default_ipv4.address }}",
-          "--disable-admission-plugins=ServiceAccount",
+          "--service-account-key-file=/etc/kubernetes/service-accounts-public.pem",
           "--v=2"
+        ],
+        "volumeMounts": [
+          {
+            "name": "kubeconfig",
+            "mountPath": "/etc/kubernetes",
+            "readOnly": true
+          }
         ],
         "livenessProbe": {
           "httpGet": {
@@ -28,6 +35,14 @@
           },
           "initialDelaySeconds": 90,
           "timeoutSeconds": 15
+        }
+      }
+    ],
+    "volumes": [
+      {
+        "name": "kubeconfig",
+        "hostPath": {
+          "path": "/etc/kubernetes"
         }
       }
     ]
