--- a/roles/kube-master/templates/kube-controller-manager.json.j2
+++ b/roles/kube-master/templates/kube-controller-manager.json.j2
@@ -13,7 +13,7 @@
         "command": [
           "/hyperkube",
           "controller-manager",
-          "--master={{ apiserver_address }}",
+          "--master=127.0.0.1:8080",
           "--service-account-private-key-file=/etc/kubernetes/service-accounts-private.pem"
         ],
         "volumeMounts": [
