--- a/roles/kube-master/templates/kube-scheduler.json.j2
+++ b/roles/kube-master/templates/kube-scheduler.json.j2
@@ -13,7 +13,7 @@
         "command": [
           "/hyperkube",
           "scheduler",
-          "--master={{ apiserver_address }}"
+          "--master=127.0.0.1:8080"
         ],
         "livenessProbe": {
           "httpGet": {
