Generate tls certificate for apiserver

--- a/roles/kube-worker/templates/kubeconfig.yml.j2
+++ b/roles/kube-worker/templates/kubeconfig.yml.j2
@@ -3,8 +3,8 @@ kind: Config
 clusters:
 - name: pi-cluster
   cluster:
-    insecure-skip-tls-verify: true
     server: https://{{ master_ip }}:6443
+    certificate-authority: /etc/ssl/certs/ca.crt
 users:
 - name: {{ item.user_name }}
   user:
