--- a/roles/flannel/templates/flannel.service.j2
+++ b/roles/flannel/templates/flannel.service.j2
@@ -5,7 +5,7 @@ After=etcd.service
 
 [Service]
 Type=notify
-ExecStartPre=/usr/bin/etcdctl set /coreos.com/network/config '{ "Network": "{{ cluster_cidr }}", "Backend": {"Type": "vxlan"}}'
+ExecStartPre=/usr/bin/etcdctl set /coreos.com/network/config '{ "Network": "{{ pod_cluster_ip_range }}", "Backend": {"Type": "vxlan"}}'
 ExecStart=/usr/bin/flanneld
 Restart=always
 RestartSec=5s
