--- a/roles/kube-master/templates/kube-apiserver.json.j2
+++ b/roles/kube-master/templates/kube-apiserver.json.j2
@@ -15,9 +15,13 @@
           "apiserver",
           "--etcd-servers=http://127.0.0.1:2379",
           "--bind-address={{ ansible_default_ipv4.address }}",
+          "--service-cluster-ip-range={{ service_cluster_ip_range }}",
           "--token-auth-file=/etc/kubernetes/known-tokens.csv",
           "--authorization-mode=Node,RBAC",
           "--enable-admission-plugins=NodeRestriction",
+          "--client-ca-file=/etc/ssl/certs/ca.crt",
+          "--tls-cert-file=/etc/kubernetes/apiserver.crt",
+          "--tls-private-key-file=/etc/kubernetes/apiserver.key",
           "--service-account-key-file=/etc/kubernetes/service-accounts-public.pem",
           "--v=2"
         ],
@@ -25,6 +29,11 @@
           {
             "name": "kubeconfig",
             "mountPath": "/etc/kubernetes",
+            "readOnly": true
+          },
+          {
+            "name": "ssl",
+            "mountPath": "/etc/ssl",
             "readOnly": true
           }
         ],
@@ -45,6 +54,12 @@
         "name": "kubeconfig",
         "hostPath": {
           "path": "/etc/kubernetes"
+        }
+      },
+      {
+        "name": "ssl",
+        "hostPath": {
+          "path": "/etc/ssl"
         }
       }
     ]
