--- a/roles/kube-master/templates/kube-controller-manager.json.j2
+++ b/roles/kube-master/templates/kube-controller-manager.json.j2
@@ -14,12 +14,18 @@
           "/hyperkube",
           "controller-manager",
           "--master=127.0.0.1:8080",
+          "--root-ca-file=/etc/ssl/certs/ca.crt",
           "--service-account-private-key-file=/etc/kubernetes/service-accounts-private.pem"
         ],
         "volumeMounts": [
           {
             "name": "kubeconfig",
             "mountPath": "/etc/kubernetes",
+            "readOnly": true
+          },
+          {
+            "name": "ssl",
+            "mountPath": "/etc/ssl",
             "readOnly": true
           }
         ],
@@ -40,6 +46,12 @@
         "name": "kubeconfig",
         "hostPath": {
           "path": "/etc/kubernetes"
+        }
+      },
+      {
+        "name": "ssl",
+        "hostPath": {
+          "path": "/etc/ssl"
         }
       }
     ]
