--- a/roles/kube-node/templates/kubelet-config.yml.j2
+++ b/roles/kube-node/templates/kubelet-config.yml.j2
@@ -1,5 +1,10 @@
 kind: KubeletConfiguration
 apiVersion: kubelet.config.k8s.io/v1beta1
+authentication:
+  anonymous:
+    enabled: true
+authorization:
+  mode: AlwaysAllow
 cgroupDriver: cgroupfs
 kubeletCgroups: /systemd/system.slice
 staticPodPath: /etc/kubernetes/manifests
