Added Docker registry addon

--- a/roles/kube-worker/templates/kubeconfig.yml.j2
+++ b/roles/kube-worker/templates/kubeconfig.yml.j2
@@ -4,7 +4,7 @@ clusters:
 - name: pi-cluster
   cluster:
     server: https://{{ master_ip }}:6443
-    certificate-authority: /etc/ssl/certs/ca.crt
+    certificate-authority: /usr/local/share/ca-certificates/ca.crt
 users:
 - name: {{ item.user_name }}
   user:
