Move download/build logic of the binaries to the playbooks

--- a/roles/kube-master/templates/kube-scheduler.yml.j2
+++ b/roles/kube-master/templates/kube-scheduler.yml.j2
@@ -7,7 +7,7 @@ spec:
   hostNetwork: true
   containers:
   - name: kube-scheduler
-    image: "{{ hyperkube_image_name }}:{{ hyperkube_image_tag }}"
+    image: "{{ hyperkube_image_name }}:{{ kubernetes_version }}"
     command:
     - /hyperkube
     - scheduler
