--- a/roles/kube-master/templates/kube-apiserver.yml.j2
+++ b/roles/kube-master/templates/kube-apiserver.yml.j2
@@ -7,7 +7,7 @@ spec:
   hostNetwork: true
   containers:
   - name: kube-apiserver
-    image: "{{ hyperkube_image_name }}:{{ hyperkube_image_tag }}"
+    image: "{{ hyperkube_image_name }}:{{ kubernetes_version }}"
     command:
     - /hyperkube
     - apiserver
