--- a/roles/kube-master/templates/kube-controller-manager.yml.j2
+++ b/roles/kube-master/templates/kube-controller-manager.yml.j2
@@ -3,6 +3,7 @@ kind: Pod
 apiVersion: v1
 metadata:
   name: kube-controller-manager
+  namespace: kube-system
 spec:
   hostNetwork: true
   containers:
