Fix container's resolv.conf to search namesapce + set node roles

--- a/roles/kube-node/templates/kubelet-config.yml.j2
+++ b/roles/kube-node/templates/kubelet-config.yml.j2
@@ -9,3 +9,4 @@ cgroupDriver: cgroupfs
 kubeletCgroups: /systemd/system.slice
 staticPodPath: /etc/kubernetes/manifests
 clusterDNS: [{{ dns_service_cluster_ip }}]
+clusterDomain: cluster.local
