--- a/roles/kube-worker/templates/kubeconfig.yml.j2
+++ b/roles/kube-worker/templates/kubeconfig.yml.j2
@@ -3,7 +3,7 @@ kind: Config
 clusters:
 - name: pi-cluster
   cluster:
-    server: https://{{ master_ip }}:6443
+    server: https://{{ hostvars['master'].ansible_default_ipv4.address }}:6443
     certificate-authority: /usr/local/share/ca-certificates/ca.crt
 users:
 - name: {{ item.user_name }}
