--- a/roles/kube-dns/templates/coredns.yml.j2
+++ b/roles/kube-dns/templates/coredns.yml.j2
@@ -84,7 +84,7 @@ spec:
       serviceAccountName: coredns
       containers:
       - name: coredns
-        image: coredns/coredns:1.5.0
+        image: coredns/coredns:{{ coredns_version }}
         resources:
           limits:
             memory: 170Mi
